# asr_sdm_ws

./: README.md  can_protocol.md  comm_protocol.md  install_matplotplusplus.sh  pinocchio_installation.md  pinocchio_set_up_repos.py  svo1.0_pipeline.drawio  test_euroc.sh
src/asr_sdm_hardware/: CMakeLists.txt  package.xml
src/asr_sdm_hardware/config/: periphery_config.yaml
src/asr_sdm_hardware/include/asr_sdm_hardware/: uart2can.hpp  uart_can.hpp
src/asr_sdm_hardware/launch/: launch_interface.py
src/asr_sdm_hardware/msg/: CANFrame.msg
src/asr_sdm_hardware/src/: asr_sdm_hardware_node.cpp  uart2can.cpp  uart_can.cpp
src/asr_sdm_msgs/asr_sdm_perception_msgs/: CMakeLists.txt  package.xml
src/asr_sdm_msgs/asr_sdm_perception_msgs/msg/: DenseInputWithFeatures.msg
src/asr_sdm_msgs/svo_msgs/: CMakeLists.txt  package.xml
src/asr_sdm_msgs/svo_msgs/msg/: CameraMeasurement.msg  Info.msg
src/asr_sdm_sensors/asr_sdm_imu_hiwonder_10axis/: CMakeLists.txt  package.xml
src/asr_sdm_sensors/asr_sdm_imu_hiwonder_10axis/include/asr_sdm_imu_hiwonder_10axis/: hiwonder_10axis.hpp  imu_hiwonder_10axis.hpp
src/asr_sdm_sensors/asr_sdm_imu_hiwonder_10axis/src/: asr_sdm_imu_hiwonder_10axis_node.cpp  hiwonder_10axis.cpp  imu_hiwonder_10axis.cpp
src/asr_sdm_universe/common/fast/: CMakeLists.txt
src/asr_sdm_universe/common/fast/include/fast/: corner_11.h  corner_12.h  corner_9.h  fast.h
src/asr_sdm_universe/common/minkindr/minkindr/: CMakeLists.txt
src/asr_sdm_universe/perception/asr_sdm_folder_img/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_folder_img/launch/: image_folder_publisher.launch.py
src/asr_sdm_universe/perception/asr_sdm_folder_img/src/: image_folder_publisher.cpp
src/asr_sdm_universe/perception/asr_sdm_object_detector/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_object_detector/config/: img_detector.param.yaml
src/asr_sdm_universe/perception/asr_sdm_object_detector/include/asr_sdm_object_detector/: img_detector.hpp
src/asr_sdm_universe/perception/asr_sdm_object_detector/launch/: img_detector.launch.xml
src/asr_sdm_universe/perception/asr_sdm_object_detector/src/: img_detector.cpp  img_detector.hpp
src/asr_sdm_universe/perception/asr_sdm_video_enhancement/: CMakeLists.txt  README.md  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_enhancement/include/asr_sdm_video_enhancement/: asr_sdm_video_enhancement.hpp
src/asr_sdm_universe/perception/asr_sdm_video_enhancement/scripts/: play_video_as_ros_topic.py
src/asr_sdm_universe/perception/asr_sdm_video_enhancement/src/: asr_sdm_video_enhancement.cpp
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_ceres_backend/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_ceres_backend/src/: ceres_backend_interface.cpp  error_interface.cpp  estimator.cpp  homogeneous_point_local_parameterization.cpp  imu_error.cpp  map.cpp  marginalization_error.cpp  outlier_rejection.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  relative_pose_error.cpp
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_common/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_common/src/: frame.cpp  point.cpp
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_common/test/: test_feature_wrapper.cpp
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_msgs/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_msgs/msg/: DenseInput.msg  DenseInputWithFeatures.msg  Info.msg
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_ros2/: CMakeLists.txt  package.xml  rviz_config_vio.rviz  svo_nodelet.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_ros2/launch/: euroc_global_map_mono.launch  euroc_global_map_mono.launch.py  euroc_vio_mono.launch  euroc_vio_mono.launch.py  euroc_vio_stereo.launch  euroc_vio_stereo.launch.py  live_nodelet.launch
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_ros2/param/: vio_mono.yaml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_ros2/scripts/: analyze_bag.py
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_ros2/src/: backend_factory.cpp  backend_integration.hpp  backend_visualizer.cpp  benchmark_node.cpp  ceres_backend_factory.cpp  csv_dataset_reader.cpp  rig_pose_to_tf.cpp  svo_factory.cpp  svo_interface.cpp  (+4 more)
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_rpg_common/: CMakeLists.txt  package.xml  package.xml.backup
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_test_utils/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_vio/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_vio.backup/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_vio_ceres_backend/: CMakeLists.txt  CMakeLists.txt.backup  package.xml  package.xml.backup
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_vio_cmake/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_vio_common/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_vio_direct/: CMakeLists.txt  CMakeLists.txt.backup  package.xml  package.xml.backup
src/asr_sdm_universe/perception/asr_sdm_video_inertial_odometry/asr_sdm_vio_global_map/: CMakeLists.txt  CMakeLists.txt.backup  README_BUILD.md  package.xml.backup
src/asr_sdm_universe/robot/asr_sdm_hardware/: CMakeLists.txt  package.xml
src/asr_sdm_universe/robot/asr_sdm_hardware/config/: periphery_config.yaml
src/asr_sdm_universe/robot/asr_sdm_hardware/src/: asr_sdm_hardware_node.cpp  comm_protocol.cpp  uart2can.cpp
(+606 files in other folders)
