<?xml version="1.0"?>
<package format="3">
  <name>asr_sdm_vio</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy port scaffolding for MSCKF-VIO (messages + upcoming nodes)</description>

  <maintainer email="dev@asr_sdm.local">ASR SDM</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

